# fraud-platform

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.bentoml/: client_id
.bentoml/prometheus_multiproc_dir/: counter_3290.db  counter_97269.db  gauge_all_3290.db  gauge_all_97269.db  gauge_livesum_3290.db  gauge_livesum_97269.db  histogram_3290.db  histogram_97269.db
.cursor/plans/: api_contract_and_feast_642b4b62.plan.md  fraud_detection_mvp_c6bea842.plan.md  model_registry_critique_078485a0.plan.md  scale_fraud_mvp_eac7a314.plan.md  serve_model_in_app_c121c3af.plan.md
config/: simulation.yaml
data/processed/: model_dataset.csv
data/raw/: simulation_metadata.json  transactions.csv
feature_repo/: feature_store.yaml  transaction_features.py
feature_repo/data/: transaction_features.parquet
models/: training_metrics.json  xgboost_fraud_model.json
src/data/: simulate_transactions.py
src/feature_store/: __init__.py  constants.py  reader.py  store.py  writer.py
src/features/: build_features.py
src/fraud_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mlops/: __init__.py  promote_model.py  registry_constants.py
src/models/: score_transaction.py  train_xgboost.py
src/serving/: __init__.py  bento_service.py  contracts.py  mlflow_model_loader.py
src/streaming/: __init__.py  ingestion.py  worker.py
tests/: conftest.py  test_bento_service.py  test_bento_service_http.py  test_feast_integration.py  test_mlops_promote.py  test_streaming_parity.py
