[project]
name = "fraud-platform"
version = "0.1.0"
description = "Fraud detection MVP with simulation and XGBoost scoring"
requires-python = ">=3.11,<3.14"
dependencies = [
  "bentoml",
  "numpy",
  "pandas",
  "mlflow",
  "pyyaml",
  "scikit-learn",
  "xgboost",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
